# PWBot

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
cogs/: chat.py  games.py  mod.py  reactions.py  wc2_replies.py
