[tool.poetry]
name = "pickle-wench-bot"
version = "0.1.0"
description = "Bot for private discord server."
authors = ["drewt <drew.tschetter@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^1.1.2"
discord = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
