[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool]
[tool.poetry]
authors = ["drewt <drew.tschetter@gmail.com>"]
description = "Bot for private discord server."
license = "MIT License"
name = "pickle-wench-bot"
version = "0.1.0"
[tool.poetry.dependencies]
Flask = "^2.3.2"
discord = "^1.0.1"
python = "^3.8"
gspread = "^5.0.0"
discord-py-slash-command = "^3.0.1"
[tool.poetry.dev-dependencies]
